template.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"

  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: "true"

  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: "AWS::EC2::Route"
    Properties:
    RouteTableId: !Ref RouteTable
    DestinationCidrBlock: "0.0.0.0/0"
    GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
    SubnetId: !Ref PublicSubnet
    RouteTableId: !Ref RouteTable

  ElasticIP:
    Type: "AWS::EC2::EIP"
    Properties:
    Domain: "vpc"

  EIPAssociation:
    Type: "AWS::EC2::EIPAssociation"
    Properties:
    AllocationId: !GetAtt ElasticIP.AllocationId
    InstanceId: "your_instance_id"

  NetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
    VpcId: !Ref VPC

  InboundNetworkAcl:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
    CidrBlock: "0.0.0.0/0"
    Egress: "false"
    NetworkAclId: !Ref NetworkAcl
    Protocol: "-1"
    RuleAction: "allow"
    RuleNumber: "100"

  SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
    GroupDescription: "Enable ssh access via port 22"
    VpcId: !Ref VPC
    Ingress:
      - IpProtocol: "tcp"
        FromPort: "22"
        ToPort: "22"
        CidrIp: "your_allowed_IP_range"

  BastionInstance:
    Type: "AWS::EC2::Instance"
    Properties:
    InstanceType: "t2.micro"
    ImageId: "ami-0c94855ba95c71c99"
    KeyName: "your_key_pair"
    SubnetId: !Ref PublicSubnet
    SecurityGroupIds:
      - !Ref SecurityGroup
    UserData: !Base64 "your_user_data_script"
